Feature/sj 182 crud (#9)
* SJ-182: crud for user
