# auth-service/src/users/handlers/authenticate.js
@@ -1,34 +1,39 @@
 import jwt from 'jsonwebtoken';
-import logger from '../../libs/logger';
+
 import { User } from '../models/user.model';
+import { BaseController } from '../../helpers/base-controller';
+import logger from '../../libs/logger';
+import config from '../../config.json';
 
-const config = require('../../config.json');
+const log = logger.get('Authenticate_Handler');
 
-const log = logger.get('users/authenticate');
+export class AuthenticateHandler extends BaseController {
+  async executeImpl () {
+    const { username, password } = this.req.body;
 
-export async function authenticate (req, res, next) {
-  const { username, password } = req.body;
+    try {
+      const foundUser = await User.findOne(
+        { username, password },
+        { username: false, password: false },
+      );
+      const user = foundUser.toObject();
 
-  const foundUserDoc = await User.findOne({ username, password });
+      return jwt.sign({ sub: user._id }, config.secret, { expiresIn: '30m' }, (err, token) => {
+        if (err) {
+          log.error(err);
+          return this.jwtError(err);
+        }
 
-  const user = foundUserDoc.toObject();
+        const userResponse = {
+          ...user,
+          authToken: token,
+        };
 
-  if (!user) return next('No such user or password is incorrect');
-
-  return jwt.sign({ sub: user.id }, config.secret, { expiresIn: '30m' }, (err, token) => {
-    if (err) {
+        return this.success(userResponse);
+      });
+    } catch (err) {
       log.error(err);
-
-      return next(err);
+      return this.notFound();
     }
-
-    const { password: mockPassword, username: mockUsername, ...userData } = user;
-
-    const userResponse = {
-      ...userData,
-      authToken: token,
-    };
-
-    return res.json(userResponse);
-  });
+  }
 }
